syntax = "proto2";
package BlitzMessage;

option java_package = "com.blitzhere.BlitzMessage";
option java_generic_services = true;

import "objectivec-descriptor.proto";
option (google.protobuf.objectivec_file_options).package = "";
option (google.protobuf.objectivec_file_options).class_prefix = "B";
option (google.protobuf.objectivec_file_options).relax_camel_case = true;


//----------------------------------------------------------------------------------------
//
//                                                                             Entity Tags
//
//----------------------------------------------------------------------------------------


enum EntityType {
  ETUnknown     = 0;
  ETUser        = 1;
  ETFeedPost    = 2;
}


message EntityTag {
  optional string       tagName         = 1;
  optional bool         userHasTagged   = 2;
  optional int32        tagCount        = 3;
}


message EntityTagList {
  optional string       entityID    = 1;
  optional EntityType   entityType  = 2;
  repeated EntityTag    entityTags  = 3;
}
